# gpt-pool-analyzer

./: .gitignore  AGENTS.md  Info.plist  README.md  RELEASE_NOTES.md  build.sh  index.html  package-lock.json  package.json  release.sh  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml
Sources/: main.swift
server/: Dockerfile  app.py  docker-compose.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  textarea.tsx
src/lib/: api.ts  types.ts  utils.ts
tools/: generate_icon.swift  pngs_to_icns.py
